--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>This is my first jenkins project</h1>
-    <a href="/about.html">click here for about page</a>
+    <a href="about.html">click here for about page</a>
 </body>
 </html>
