ducat page added

--- a/ducat.html
+++ b/ducat.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my first jenkins project</h1>
-    <a href="about.html">click here for about page</a>
-    <a href="ducat.html">ducat page</a>
+    this is ducat
 </body>
 </html>
