--- a/service.html
+++ b/service.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my about page</h1>
-    <a href="index.html">click here for home page</a>
-    <a href="service.html">click here for service</a>
+   <h1>This is my service file</h1> 
 </body>
 </html>
