--- a/gms.html
+++ b/gms.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my first project for jenkins</h1>
-    <a href="about.html">click here for about page</a>
-    <a href="gms.html">GMS Page</a>
+    <h1>GMS PAGE</h1>
 </body>
 </html>
