--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my first project for jenkins</h1>
+    <h1>This is my project for jenkins</h1>
     <a href="about.html">click here for about page</a>
-    <a href="gms.html">GMS Page</a>
 </body>
 </html>
