--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>This is my service page</h1>
-    <a href="index.html">click here for home page</a>
+    <a href="index.html">click here for home page</a><br>
     <a href="service.html">click here for service</a>
 </body>
 </html>
